MAJOR Add: RSS feed, Fix: TOC align, auto navmenu

--- a/assets/scss/tufte/_base.scss
+++ b/assets/scss/tufte/_base.scss
@@ -165,7 +165,7 @@ body {
 .container {
   @media (min-width: 1000px) {
     // Tufte
-    padding-right: 12.5%;
+    padding-right: 20%;
     width: 87.5%;
     max-width: 1250px;
   }
@@ -333,7 +333,9 @@ tr:last-of-type td:last-of-type {
     opacity: 0.6;
   }
 }
-
+.custom-scrollbar::-webkit-scrollbar-corner {
+  background: var(--bg);
+}
 // ----------------
 // Dark Mode toggle
 // ----------------
