--- a/assets/scss/tufte/_layout.scss
+++ b/assets/scss/tufte/_layout.scss
@@ -9,11 +9,11 @@ footer,
 
 .nav {
   box-shadow: 0 2px 2px -2px $shadow-color;
+  background: var(--bg);
   overflow: auto;
 
   &-container {
     margin: 1rem auto;
-    position: sticky;
     text-align: left;
   }
 
@@ -52,15 +52,7 @@ footer,
     list-style-type: none;
     margin: 1rem 0 0;
     padding: 0;
-    text-align: center;
-    // Rougier
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
+    text-align: left;
   }
 
   li {
@@ -95,20 +87,6 @@ footer,
   }
 }
 
-@media (min-width: 600px) {
-  .nav {
-    &-container {
-      text-align: left;
-    }
-
-    ul {
-      bottom: 0;
-      position: absolute;
-      right: 0;
-    }
-  }
-}
-
 footer {
   font-family: $serif-secondary;
   padding: 2rem 0;
@@ -127,10 +105,11 @@ footer {
     // Tufte
     float: right;
     clear: right;
-    margin-right: -60%;
-    width: 50%;
+    margin-right: -50%;
+    width: 40%;
     margin-top: 0.3rem;
     margin-bottom: 0;
+    padding-bottom: 0.1rem;
     line-height: 1.3;
     vertical-align: baseline;
     position: sticky;
