--- a/assets/scss/tufte/_post.scss
+++ b/assets/scss/tufte/_post.scss
@@ -28,17 +28,20 @@
     color: var(--font);
     font-family: "Cormorant", serif;
     font-style: italic;
-    // font-size: 4.5rem;
-    font-size: 3.6rem;
-    margin: 1rem 0;
-    text-align: center;
+    font-size: 4.5rem;
+    @media (max-width: 1250px) {
+      font-size: 3.6rem;
+    }
+    margin: 1.5rem 0;
+    text-align: left;
   }
 
   &-line {
-    border-top: 0.4rem solid var(--font);
+    border-top: 0.2rem solid var(--font);
     display: block;
-    margin: 0 auto 1.5rem;
-    width: 4rem;
+    opacity: 0.6;
+    margin: 0 4.5rem 1.5rem 0;
+    width: 7.5rem;
   }
 
   p {
